# Finance-Automation

./: .env.example  .gitignore  AGENTS.md  Agent_02_GL_Capital_Reconciliation.html  AssetMgt_ScenarioExample.md  BCAR_Animated_Movie.html  BCAR_Capital_Intelligence_Prototype.html  BCAR_Day_in_the_Life.html  BCAR_Story.html  BMO_Bank_Reconciliation_Functions_Complete.xlsx  BMO_Controllership_FAA_Complete.xlsx  BMO_Finance_Transformation_COO_Dashboard.html  EPM_WFP_Requirements_v1_2.xlsx  FinanceSmith.tsx  GL_to_Capital_Reconciliation_Agent.html  INDEX.HTML  JOURNAL_VARIANCE_ANALYSIS.html  Layout (1)  Layout (3)  Oracle_EPM_WFP_Integrated_v5.xlsx  Oracle_EPM_WFP_Project_Plan_v3.xlsx  PCC_Integrated_Diagnostic_JE_FAA_Rec_Correlation.xlsx  SKILL.md  config.yaml  main.py  mermaid  pyproject.toml  requirements.txt  run_sprott.py  sprott_roadmap.html
Rudra_Agents/: ARCHITECTURE_REVIEW.md  FT_AgenticFramework.md  accounting-hub-architect.md  accounting-policy-engine.md  apqc-researcher.md  coa-designer.md  consolidation-reporting-agent.md  creative-designer.md  databricks-pipeline-agent.md  esg-reporting-agent.md  fact-check-agent.md  financial-modeling-agent.md  internal-audit-agent.md  lease-accounting-agent.md  ma-due-diligence-agent.md  openclaw-integration.md  openclaw-orchestrator.md  rapid-prototyper.md  revenue-recognition-agent.md  rudra.md  si-change-management-lead.md  si-data-analytics-lead.md  si-data-architect.md  si-finance-process-lead.md  si-functional-lead.md  si-integration-lead.md  si-security-controls-lead.md  sprott-finance-advisor.md  tax-accounting-agent.md  (+2 more)
(+64 files in other folders)
