[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rudra"
version = "0.1.0"
description = "Skills-based multi-agent framework for finance transformation consulting"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
routing = [
    "sentence-transformers>=2.2",
    "torch>=2.0",
]
llm = [
    "anthropic>=0.30",
]
orchestration = [
    "langgraph>=0.2",
    "langchain-core>=0.3",
]
all = [
    "rudra[routing,llm,orchestration]",
]
dev = [
    "rudra[all]",
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
rudra = "rudra.cli:main"

[tool.setuptools.packages.find]
include = ["rudra*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
